src/objects/Hotel_Allocation_MERC__c.object
<CustomObject>
    <description>Used to track which Hotels are utilized for a Meeting Day and track room consumption. Created 12/5/2013 by KLorenti, Mavens Consulting</description>
    <fields>
        <fullName>Booked_Rooms__c</fullName>
        <description>Auto-calculated based on those Meeting Participants using the Room Block. Oliver Dunford 13th Dec 2013.</description>
        <label>Booked Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Day_Date_MERC__c</fullName>
        <description>Pulls the Date from the Meeting Day record. Oliver Dunford 13th Dec</description>
        <formula>Meeting_Day_MERC__r.Date_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Day Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Day_MERC__c</fullName>
        <description>Master Detail Relationship to Meeting Day. Created 12/5/2013 by KLorenti, Mavens Consulting Changed to a Master Detail relationship.  4/2/2014 J Adams</description>
        <label>Meeting Day</label>
        <referenceTo>Meeting_Day_MERC__c</referenceTo>
        <relationshipLabel>Hotel Allocation</relationshipLabel>
        <relationshipName>Hotel_Allocation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting_Vendor_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship to Meeting Vendor to associate a Hotel to Hotel Allocation. Created 12/5/2013 by KLorenti, Mavens Consulting</description>
        <label>Meeting Vendor</label>
        <referenceTo>Meeting_Vendor_MERC__c</referenceTo>
        <relationshipLabel>Hotel Allocation</relationshipLabel>
        <relationshipName>Hotel_Allocations_MERC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Rooms_MERC__c</fullName>
        <description>Returns the total rooms left in the Room block. Oliver Dunford 13th Dec 2013.</description>
        <formula>Total_Rooms_in_Block_MERC__c -  Booked_Rooms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Block_Release_Date_MERC__c</fullName>
        <description>The date the hotel releases the Rooms from the Block allocated to Lilly. Oliver Dunford 13th Dec 2013.</description>
        <label>Room Block Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Rooms_in_Block_MERC__c</fullName>
        <description>Indicates the number of Rooms available for each Hotel Night. Created 12/5/2013 by KLorenti, Mavens Consulting</description>
        <label>Total Rooms in Block</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Hotel Allocation</label>
    <nameField>
        <displayFormat>H-{000000}</displayFormat>
        <label>Hotel Allocation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>